Applied AI changes to index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 <body>
     <h1>Hello from Cloudflare Pages 🚀</h1>
     <p>This website is connected to GitHub and deployed using Cloudflare.</p>
+    <p>Cloudflare is a global web infrastructure and security company that provides a content delivery network (CDN), DDoS protection, managed DNS, SSL, and performance optimizations to accelerate and secure websites and APIs; it also offers edge computing with Cloudflare Workers, static site hosting via Pages, and integrated analytics—making it easy to improve site reliability, speed, and security at scale.</p>
+
+<!-- Added: red button below the text -->
+<button id="red-btn" style="background:#e74c3c;color:#fff;border:none;padding:10px 16px;border-radius:4px;cursor:pointer;">
+  Red Button
+</button>
 </body>
 </html>
